fixed allignment now need to get it to work on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ body{
     padding:0;
     font-size:100%;
     line-height:1.5;
-    color:#555;
+    color:#000000;
     background-color: white;
     font-family:'Montserrat',sans-serif;
 }
@@ -66,7 +66,8 @@ h2{
     display: inline;
 }
 h3{
-    font-size:1.5rem
+    font-size:1.5rem;
+    display; inline-flex
 }
 h4{
     font-size:1rem
@@ -248,7 +249,7 @@ h4{
 }
 @media (min-width: 42em) {
   :root {
-    --width: 50rem;
+    --width: 50vw;
   }
 }
 
@@ -379,10 +380,10 @@ Devicons
 /*        color:#83C558;*/
     }
     .devicon-react-original-wordmark:before{
-        color:#555555;
+        color:#000000;
     }
     .devicon-nodejs-plain-wordmark:before{
-        color:#555555;
+        color:#000000;
     }
     .devicon-python-plain-wordmark:before {
 /*        color:#83C558;*/
@@ -537,8 +538,24 @@ figure,ol,p,ul{
         width:60%
     }
     .contents-right{
-        margin-top:5%
+        margin-top:5%;
+        margin-bottom:5%;
+        text-align:right;
+        display: inline;
     }
+    .contents-center{
+      margin-top:5%;
+      margin-bottom:5%;
+      text-align:center;
+      display: inline-block;
+      align-content: center;
+  }
+    .contents-left{
+      margin-top:5%;
+      margin-bottom:5%;
+      text-align:left;
+      display: inline;
+  }
     .contents-right,.images-right{
         float:right;
         width:60%
@@ -553,21 +570,21 @@ figure,ol,p,ul{
     .images-left img{
         float:left
     }
-    .contents-center{
-        margin-top:5%
-  }
 }
 
+.whippingContainer{
+  max-width: 200px;
+}
 
 .project-link{
-    display:inline-table;
-    grid-template-columns: auto auto auto auto;
-    width:100px;
-    margin:10px 0 0 0;
-    padding: 2.4rem;
+    display:inline-block;
+    /* float: left; */
+    align-items: center;
+    margin:10px 10px 0 0;
+    padding: 1.2rem 2.4rem;
     background: #ffebee;
     background-clip: padding-box;
-    box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
     text-align:center;
     outline:none;
     text-decoration:none;
@@ -610,22 +627,6 @@ figure,ol,p,ul{
 /* ################################# modal setup #######################
 #####################################################################
 #################################################################### */
-
-/* .iframe-container {
-  position: absolute;
-  top: 200px;
-  bottom: 0;
-  width: 100%;
-  background: #555;
-  overflow-y: hidden;
-} */
-
-/* .iframe-container iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  } */
-
 /**
  * Material Modal CSS
  */
@@ -666,7 +667,7 @@ figure,ol,p,ul{
   will-change: transform, opacity;
   position: relative;
   padding: 2.4rem;
-  background: #ffebee;
+  background: #54516a;
   background-clip: padding-box;
   box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
   opacity: 0;
@@ -680,10 +681,10 @@ figure,ol,p,ul{
   cursor: pointer;
 }
 .modal__trigger {
-  position: relative;
   display: inline-block;
+  margin:10px 10px 0 0;
   padding: 1.2rem 2.4rem;
-  color: rgba(0,0,0,0.7);
+  /* color: rgba(0,0,0,0.7); */
   line-height: 1;
   cursor: pointer;
   background: #ffebee;
